--- a/kubernetes/apps/monitoring-app.yaml
+++ b/kubernetes/apps/monitoring-app.yaml
@@ -18,4 +18,8 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
-      - Replace=true
+  ignoreDifferences:
+    - group: "apiextensions.k8s.io"
+      kind: "CustomResourceDefinition"
+      jsonPointers:
+        - /metadata/annotations/kubectl.kubernetes.io~1last-applied-configuration
