--- a/kubernetes/apps/monitoring-stack-app.yaml
+++ b/kubernetes/apps/monitoring-stack-app.yaml
@@ -1,4 +1,3 @@
-# In kubernetes/apps/monitoring-stack-app.yaml
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -11,9 +10,9 @@ spec:
     chart: "kube-prometheus-stack"
     targetRevision: "58.2.1"
     helm:
-      # This tells the chart to override some default values
+      # This 'values' block contains the fix for NodeAffinity
       values: |
-        # We keep this from before to prevent CRD conflicts
+        # This is to prevent CRD conflicts
         crds:
           enabled: false
         # This is the new part that disables the scheduling rules
