--- a/kubernetes/apps/monitoring-stack-app.yaml
+++ b/kubernetes/apps/monitoring-stack-app.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: monitoring-stack
   namespace: argopd
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
 spec:
   project: default
   source:
