--- a/kubernetes/apps/monitoring-app.yaml
+++ b/kubernetes/apps/monitoring-app.yaml
@@ -7,8 +7,8 @@ spec:
   project: default
   source:
     repoURL: 'https://charts.bitnami.com/bitnami'
-    chart: 'prometheus' # <--- This is the corrected chart name
-    targetRevision: '15.5.4' # A recent, valid version
+    chart: 'prometheus'
+    # The targetRevision line has been removed
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: monitoring
