feat: Add ArgoCD App of Apps configuration

--- a/ansible/inventory/hosts.ini
+++ b/ansible/inventory/hosts.ini
@@ -4,3 +4,6 @@
 [workers]
 192.168.1.101 ansible_user=ztr
 192.168.1.102 ansible_user=ztr
+
+[all:vars]
+ansible_python_interpreter=/usr/bin/python3
