--- a/ansible/playbooks/setup_cluster.yml
+++ b/ansible/playbooks/setup_cluster.yml
@@ -1,14 +1,5 @@
 ---
-- name: Configure K3s Master Node
-  hosts: master
+- hosts: all
   become: true
   roles:
-    - common
-    - k3s_master
-
-- name: Configure K3s Worker Nodes
-  hosts: workers
-  become: true
-  roles:
-    - common
-    - k3s_worker
+    - role: common
