--- a/kubernetes/apps/nodejs-app.yml
+++ b/kubernetes/apps/nodejs-app.yml
@@ -9,7 +9,7 @@ spec:
   source:
     repoURL: 'https://github.com/ztr1566/k3s-node-project.git'
     targetRevision: HEAD
-    path: kubernetes/manifests/
+    path: kubernetes/manifests/nodejs-app
   destination:
     server: https://kubernetes.default.svc
     namespace: nodejs-app
