--- a/kubernetes/apps/monitoring-app.yaml
+++ b/kubernetes/apps/monitoring-app.yaml
@@ -1,22 +1,22 @@
-# # kubernetes/apps/monitoring-app.yaml
-# apiVersion: argoproj.io/v1alpha1
-# kind: Application
-# metadata:
-#   name: monitoring
-#   namespace: argocd
-# spec:
-#   project: default
-#   source:
-#     repoURL: "https://prometheus-community.github.io/helm-charts"
-#     chart: kube-prometheus-stack
-#     targetRevision: 58.0.0 # A recent stable version
-#   destination:
-#     server: https://kubernetes.default.svc
-#     namespace: monitoring
-#   syncPolicy:
-#     automated:
-#       prune: true
-#       selfHeal: true
-#     syncOptions:
-#       - CreateNamespace=true
-#       - Replace=true
+# kubernetes/apps/monitoring-app.yaml
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: monitoring
+  namespace: argocd
+spec:
+  project: default
+  source:
+    repoURL: "https://prometheus-community.github.io/helm-charts"
+    chart: kube-prometheus-stack
+    targetRevision: 58.0.0 # A recent stable version
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: monitoring
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
+      - Replace=true
