--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -18,7 +18,7 @@ spec:
     command: ["cat"]
     tty: true
   - name: kaniko
-    image: ghcr.io/kaniko-project/executor:debug
+    image: ghcr.io/kaniko-project/executor:v1.22.1-debug
     command: ["cat"]
     tty: true
     volumeMounts:
