--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -13,15 +13,13 @@ spec:
     image: node:24-alpine
     command: ["cat"]
     tty: true
-  - name: kaniko
-    image: us-docker.pkg.dev/k8s-infra-prow/images/gcr.io/kaniko-project/executor:v20240226-020d436 
+  - name: buildah
+    image: quay.io/buildah/buildah:latest
     command: ["cat"]
     tty: true
     volumeMounts:
     - name: docker-config
-      mountPath: /kaniko/.docker
-    - name: kaniko-cache-volume
-      mountPath: /cache
+      mountPath: /root/.docker
   - name: kubectl
     image: bitnami/kubectl:latest
     command: ["cat"]
@@ -44,8 +42,6 @@ spec:
       items:
       - key: .dockerconfigjson
         path: config.json
-  - name: kaniko-cache-volume
-    emptyDir: {}
 """
         }
     }
