fix(jenkins): Correct shared library path and build context

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -13,13 +13,16 @@ spec:
     image: node:20-alpine
     command: ["cat"]
     tty: true
-  - name: kaniko
-    image: gcr.io/kaniko-project/executor:v1.12.1-debug
-    command: ["/bin/sh", "-c", "cat"] 
+ - name: buildah
+    image: quay.io/buildah/stable:v1.33.4
+    command: ["cat"]
     tty: true
+    env:
+    - name: STORAGE_DRIVER
+      value: vfs
     volumeMounts:
     - name: docker-config
-      mountPath: /kaniko/.docker
+      mountPath: /root/.docker
   - name: kubectl
     image: bitnami/kubectl:latest
     command: ["cat"]
