--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,8 @@
     "method-override": "^3.0.0",
     "moment": "^2.30.1",
     "mongoose": "^8.18.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prom-client": "^15.1.3"
   },
   "devDependencies": {
     "@types/node": "^24.5.0",
