--- a/kubernetes/manifests/nodejs-app/service.yml
+++ b/kubernetes/manifests/nodejs-app/service.yml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nodejs-app-service
+  labels:
+    app: nodejs-app
 spec:
   type: NodePort
   selector:
@@ -11,3 +13,7 @@ spec:
       port: 80
       targetPort: 3001
       nodePort: 30007
+    - name: http-metrics 
+      port: 3001
+      targetPort: 3001
+    
