--- a/kubernetes/manifests/nodejs-app/service.yml
+++ b/kubernetes/manifests/nodejs-app/service.yml
@@ -13,7 +13,8 @@ spec:
       port: 80
       targetPort: 3001
       nodePort: 30007
-    - name: http-metrics 
+    - name: http-metrics
+      protocol: TCP 
       port: 3002
       targetPort: 3001
     
