--- a/kubernetes/manifests/nodejs-app/app-servicemonitor.yaml
+++ b/kubernetes/manifests/nodejs-app/app-servicemonitor.yaml
@@ -2,7 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: nodejs-app-servicemonitor
-  namespace: default
+  namespace: monitoring
   labels:
     release: prometheus
 spec:
