Fixing service ports....

--- a/kubernetes/manifests/nodejs-app/app-servicemonitor.yaml
+++ b/kubernetes/manifests/nodejs-app/app-servicemonitor.yaml
@@ -6,10 +6,13 @@ metadata:
   labels:
     release: prometheus
 spec:
+  namespaceSelector:
+    matchNames:
+      - default
   selector:
     matchLabels:
       app: nodejs-app
   endpoints:
-  - port: http-metrics
-    path: /metrics
-    interval: 15s      
+    - port: http-metrics
+      path: /metrics
+      interval: 15s
