--- a/kubernetes/manifests/nodejs-app/app-servicemonitor.yaml
+++ b/kubernetes/manifests/nodejs-app/app-servicemonitor.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   namespaceSelector:
     matchNames:
-      - default
+      - nodejs-app
   selector:
     matchLabels:
       app: nodejs-app
