--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -108,7 +108,7 @@ spec:
                         def imageWithDigest = "${repositoryUri}@${imageDigest}"
 
                         echo "Scanning image with Trivy: ${imageWithDigest}"
-                        sh "trivy image --exit-code 1 --severity HIGH,CRITICAL ${imageWithDigest}"
+                        sh "trivy image --exit-code 1 --severity HIGH,CRITICAL --scanners vuln ${imageWithDigest}"
                     }
                 }
             }
